test/FAIL/dispcmd/invalid_arguments/07_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="not a <plage>+"
#-------

load boucle.o
disp mem 0x1000+x
